# ocr-overlay

./: .gitignore  README.md  pyproject.toml
cli/: main.py
scripts/: create_overlay_video.py  cursor_detector.py  json_to_csv.py  ocr_processor.py
server/: app.py
